# snake.py

./: .coveragerc  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yaml  push.yaml
snake/: __main__.py  application.py  core.py  user_interface.py
tests/: fixtures.py  test_application.py  test_food.py  test_game.py  test_renderer.py  test_snake.py  test_user_interface.py  util.py
