[tool.poetry]
name = "snake"
version = "0.1.0"
description = "The classic snake game implemented in Python using curses"
authors = ["xvm32 <xvm32@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
snake = 'snake.application:sync_main'

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
mypy = "^0.790"
pytest-cov = "^2.10.1"
tox = "^3.20.1"
tox-ini-fmt = "^0.5.0"
pylint = "^2.6.0"

[tool.pytest.ini_options]
addopts = "--cov=snake --cov-report=xml"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
