[project]
name = "wrath"
version = "0.1.0"
description = "An ncurses snake game"
authors = [{name = "xqb64", email = "x@nuked.one"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "attrs >= 23.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy >= 1.7.1",
    "ruff >= 0.1.6",
    "tox >= 4.11.4",
]

[tool.setuptools.packages.find]
where = ["snake"]